# micro-rag

./: README.md  micro-rag.py  micro_rag.py  pyproject.toml  requirements.txt
data/wikipedia-ai/: wikipedia-ai.md  wikipedia-deeplearning.md  wikipedia-llm.md
tests/: test_cli.py
